updating images and style

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
           <div class="cards-scroll" tabindex="0" aria-label="Specials carousel">
             <article class="special-card">
-              <img src="https://images.unsplash.com/photo-1606756790138-261d4d2b69f1?q=80&w=1600&auto=format&fit=crop" alt="BBQ burger special" loading="lazy">
+              <img src="./public/specials-bbq hamburguer.jpg" alt="BBQ burger special" loading="lazy">
               <div class="special-card__body">
                 <h3>BBQ Burnt-Ends Smash</h3>
                 <p>Double patty, house BBQ, crispy onions.</p>
@@ -193,7 +193,7 @@
             </article>
 
             <article class="special-card">
-              <img src="https://images.unsplash.com/photo-1541976076758-347942db1970?q=80&w=1600&auto=format&fit=crop" alt="Cocktail special" loading="lazy">
+              <img src="/public/special-cocktail.jpg" alt="Cocktail special" loading="lazy">
               <div class="special-card__body">
                 <h3>Black Cherry Sour</h3>
                 <p>Whiskey, cherry, foam — weekend only.</p>
@@ -202,7 +202,7 @@
             </article>
 
             <article class="special-card">
-              <img src="https://images.unsplash.com/photo-1544148103-0773bf10d330?q=80&w=1600&auto=format&fit=crop" alt="Loaded fries special" loading="lazy">
+              <img src="/public/specials-fries.jpg" alt="Loaded fries special" loading="lazy">
               <div class="special-card__body">
                 <h3>Korean Loaded Fries</h3>
                 <p>Gochujang mayo, scallions, sesame.</p>
@@ -260,7 +260,7 @@
             </div>
             <div class="form-row">
               <label for="party">Party size</label>
-              <input type="number" id="party" min="1" max="20" value="2" required>
+              <input type="number" id="party" min="1" max="20" value="7" required>
             </div>
             <div class="form-row">
               <label for="name">Full name</label>
@@ -305,12 +305,12 @@
             <p>Vibes from the bar & kitchen.</p>
           </header>
           <div class="gallery">
-            <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1600&auto=format&fit=crop" alt="Bar counter with lights" loading="lazy">
-            <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd?q=80&w=1600&auto=format&fit=crop" alt="Cocktail being poured" loading="lazy">
-            <img src="https://images.unsplash.com/photo-1544027993-37dbfe43562a?q=80&w=1600&auto=format&fit=crop" alt="Burger stack" loading="lazy">
-            <img src="https://images.unsplash.com/photo-1550639525-c97d455acf70?q=80&w=1600&auto=format&fit=crop" alt="Friends toasting" loading="lazy">
-            <img src="https://images.unsplash.com/photo-1514933651103-005eec06c04b?q=80&w=1600&auto=format&fit=crop" alt="Beer taps" loading="lazy">
-            <img src="https://images.unsplash.com/photo-1543775305-c60d67e1bf4e?q=80&w=1600&auto=format&fit=crop" alt="Fries and dips" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1600&auto=format&fit=crop" alt="Burguer stack" loading="lazy">
+            <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd?q=80&w=1600&auto=format&fit=crop" alt="choice cuts of meat" loading="lazy">
+            <img src="/public/drinksDisplay-gallery.jpg" alt="drinks display" loading="lazy">
+            <img src="/public/beerToast-gallery.jpg" alt="Friends toasting" loading="lazy">
+            <img src="/public/beerMug-gallery.jpg" alt="Beer Mug" loading="lazy">
+            <img src="/public/fries-gallery.jpg" alt="Fries and dips" loading="lazy">
           </div>
         </div>
       </section>
@@ -344,11 +344,14 @@
           <a href="#book">Book</a>
         </nav>
         <div class="socials" aria-label="Social media">
-          <a href="#" aria-label="Instagram">IG</a>
-          <a href="#" aria-label="TikTok">TT</a>
-          <a href="#" aria-label="Facebook">FB</a>
+          <a href="#" aria-label="Instagram"><ion-icon name="logo-instagram"></ion-icon></a>
+          <a href="#" aria-label="TikTok"><ion-icon name="logo-tiktok"></ion-icon></a>
+          <a href="#" aria-label="Facebook"><ion-icon name="logo-facebook"></ion-icon></a>
         </div>
       </div>
     </footer>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
