fixed picture display

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
           <div class="cards-scroll" tabindex="0" aria-label="Specials carousel">
             <article class="special-card">
-              <img src="./public/specials-bbq hamburguer.jpg" alt="BBQ burger special" loading="lazy">
+              <img src="public/specials-bbq-hamburguer.jpg" alt="BBQ burger special" loading="lazy">
               <div class="special-card__body">
                 <h3>BBQ Burnt-Ends Smash</h3>
                 <p>Double patty, house BBQ, crispy onions.</p>
@@ -193,7 +193,7 @@
             </article>
 
             <article class="special-card">
-              <img src="/public/special-cocktail.jpg" alt="Cocktail special" loading="lazy">
+              <img src="public/special-cocktail.jpg" alt="Cocktail special" loading="lazy">
               <div class="special-card__body">
                 <h3>Black Cherry Sour</h3>
                 <p>Whiskey, cherry, foam — weekend only.</p>
@@ -202,7 +202,7 @@
             </article>
 
             <article class="special-card">
-              <img src="/public/specials-fries.jpg" alt="Loaded fries special" loading="lazy">
+              <img src="public/specials-fries.jpg" alt="Loaded fries special" loading="lazy">
               <div class="special-card__body">
                 <h3>Korean Loaded Fries</h3>
                 <p>Gochujang mayo, scallions, sesame.</p>
@@ -307,10 +307,10 @@
           <div class="gallery">
             <img src="https://images.unsplash.com/photo-1550547660-d9450f859349?q=80&w=1600&auto=format&fit=crop" alt="Burguer stack" loading="lazy">
             <img src="https://images.unsplash.com/photo-1529193591184-b1d58069ecdd?q=80&w=1600&auto=format&fit=crop" alt="choice cuts of meat" loading="lazy">
-            <img src="/public/drinksDisplay-gallery.jpg" alt="drinks display" loading="lazy">
-            <img src="/public/beerToast-gallery.jpg" alt="Friends toasting" loading="lazy">
-            <img src="/public/beerMug-gallery.jpg" alt="Beer Mug" loading="lazy">
-            <img src="/public/fries-gallery.jpg" alt="Fries and dips" loading="lazy">
+            <img src="public/drinksDisplay-gallery.jpg" alt="drinks display" loading="lazy">
+            <img src="public/beerToast-gallery.jpg" alt="Friends toasting" loading="lazy">
+            <img src="public/beerMug-gallery.jpg" alt="Beer Mug" loading="lazy">
+            <img src="public/fries-gallery.jpg" alt="Fries and dips" loading="lazy">
           </div>
         </div>
       </section>
